cambios importantes revisar th rol String-> usuarios.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,11 @@ spring.h2.console.enabled=false
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
+#spring.jpa.open-in-view =false
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql:tcp://192.168.8.200:3306/alumno6_tablas
+#spring.datasource.username=alumno6
+#spring.datasource.password=6alumno
+
 spring.security.user.name=user
 spring.security.user.password=user
