añadiendo roles, falta borrar y mejorar vista, actualmento simple toString

--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -2,18 +2,18 @@ server.port=9090
 
 
 
-#
+
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://localhost/~/Desktop/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=false
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#
+
 
 #spring.jpa.open-in-view =false
 #spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/muro
+#spring.datasource.url=jdbc:mysql:tcp://192.168.8.200:3306/alumno6_tablas
 #spring.datasource.username=alumno6
 #spring.datasource.password=6alumno
 
